      a unit.
   -- Units will be NOCROSS by default when created.
   -- Units will only inherit AUTOTAX flag and GUARD status if they are
      combat ready.
   -- Lowered merfolk from 1000 value of spoils down to 200.  More in
      line with their difficulty.  Also lowered their spoil type to
      normal.. Pirates raised to IT_ADVANCED.
   -- Fix bug in AString::value() where integer could be overflowed into
      a negative value allowing such fun tricks as creating items out of
      nothing. (Bug reported by Sergey Budnevitch <fabler@mtu.ru>)
   -- Fixed bug in faction type changing where a faction could set magic
      5, get apprentices, and then change away from magic 5 but keep the
      apprentices.
   -- Added 'transport' and 'distribute' orders.  Transport allows movement
      between friendly units with the quartermaster skill within non-local
      transport distance and from any friendly unit within local transport
      distance to a quartermaster.  Distribute allows shipment of items
      from a quartermaster to any friendly unit within local transport
      range.  Use of these skills require the quartermaster to be located
      in a caravanserai (requires building 2/20 wood or stone to construct).
      The number of quartermasters is limited by the number of trade points.
      Use of distribute and transport counts as a trade use in the hex as
      well.  There are options to allow the level of Quartermaster skill
      to affect the non-local transport distance or the cost of shipping
      items non-locally.
   -- Fixed bug in tax being a month-long order and issuing the 'tax'
      command giving an error about work overwriting and then the unit
      working instead of taxing.
   -- Fixed bug where autotax didn't work if DEFAULT_WORK_ORDER was
      disabled and the unit was submitted as part of an orderset but had
      blank orders (only when TAX_PILLAGE_MONTHLONG was set).
