@@ -85,51 +85,40 @@ AString *ShowSkill::Report(Faction *f)
 			*str += "This skill deals with transporting and "
 				"distributing goods between non-local units "
 				"and transport structures.";
-			if ((Globals->TRANSPORT & GameDefs::QM_AFFECT_COST) &&
-			    (Globals->SHIPPING_COST > 0)) {
-				*str += AString(" The cost of shipping one weight ") +
-					"unit from one transport structure "
-					"to another transport structure is "
-					"4-((level+1)/2) * " +
-					Globals->SHIPPING_COST + " silver.";
-			}
-			if (Globals->NONLOCAL_TRANSPORT > 0) {
-				if (Globals->TRANSPORT &
-						GameDefs::QM_AFFECT_DIST) {
-					*str += AString(" Items may be shipped ") +
-						"between two transport "
-						"structures which are up to " +
-						Globals->NONLOCAL_TRANSPORT +
-						" plus (level+1)/3 "
-						" hexes distant from each "
-						"other.";
-				} else {
-					*str += AString(" Items may be shipped ") +
-						"between two transport "
-						"structures which are up to " +
-						Globals->NONLOCAL_TRANSPORT +
-						" hexes distant from each "
-						"other.";
+			if (Globals->SHIPPING_COST > 0) {
+				*str += " The cost of shipping one weight unit from one "
+				  "transport structure to another transport structure is ";
+				if (Globals->TRANSPORT & GameDefs::QM_AFFECT_COST)
+					*str += AString("4-((level+1)/2) * ");
+				*str += AString(Globals->SHIPPING_COST) + " silver.";
+				if (Globals->FRACTIONAL_WEIGHT) {
+					*str += " Items with a normal weight of 0 are "
+					  "treated as if ";
+					*str += Globals->FRACTIONAL_WEIGHT;
+					*str += " of the item in question weigh one weight unit.";
 				}
+			}
+
+			if (Globals->NONLOCAL_TRANSPORT > 0) {
+				*str += " Items may be shipped between two transport "
+				  "structures which are up to ";
+				*str += Globals->NONLOCAL_TRANSPORT;
+				if (Globals->TRANSPORT & GameDefs::QM_AFFECT_DIST)
+					*str += " plus (level+1)/3 ";
+				*str += (Globals->NONLOCAL_TRANSPORT != 1) ? "hexes" : "hex";
+				*str += " distant from each other.";
 			} else if (Globals->NONLOCAL_TRANSPORT == 0) {
 				*str += " Items may be instantaneously "
 					"shipped between any two transport "
 					"structures.";
 			}
 			if (Globals->LOCAL_TRANSPORT > 0) {
-				*str += AString(" Items may be distributed from a ") +
-					"transport structure to any unit or "
-					"transported to a transport structure "
-					"by any unit located within " +
-					Globals->LOCAL_TRANSPORT +
-					" hexes of the transport structure.";
-			}
-			if (Globals->FRACTIONAL_WEIGHT) {
-				*str += AString(" Items with a normal weight of 0 ") +
-					"are treated as if " +
-					Globals->FRACTIONAL_WEIGHT +
-					" of the item in question weigh "
-					"one weight unit.";
+				*str += " Items may be distributed from a transport "
+				  "structure to any unit or transported to a transport "
+				  "structure by any unit located within ";
+				*str += Globals->LOCAL_TRANSPORT;
+				*str += (Globals->LOCAL_TRANSPORT != 1) ? " hexes" : " hex";
+				*str += " of the transport structure.";
 			}
 			break;
 		case S_QUARRYING:
